configuration job complete, code clean still required